endpoint mise à jour note et status du followup OK (TI expo)