@@ -5,7 +5,7 @@ import fr.epita.kesKonAVu.application.followUp.FollowUpService;
 import fr.epita.kesKonAVu.domain.followUp.FollowUp;
 import fr.epita.kesKonAVu.domain.followUp.StatusEnum;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.mockito.Mockito;
@@ -48,22 +48,18 @@ public class FollowUpControllerTest {
     FollowUpService resourceFollowUpService;
 
 
-    @MockBean
-    FollowUpService followUpService;
-
-
-    @BeforeAll
+    @BeforeEach
     public void setUp() {
         baseURL = "http://localhost:" + this.port + "/v1/followup/";
     }
 
     // test du endpoint SortResourcesListByDate
     @Test
-    public void FindResourceFollowUpWhenIdIsGiven() throws IOException {
+    public void FindResourceFollowUpWhenIdIsGiven() throws IOException, URISyntaxException {
         //=> instancier les paramètre de connexion
         id = 1L;
-        this.base = new URL("http://localhost:" + port + "/V1/followup/" + id);
-        //GIVEN
+        //        Given
+        URI uri = new URI(baseURL+id);
         // liste de suivi
         FollowUp res1 = new FollowUp();
         res1.setStatus(StatusEnum.VU);
@@ -73,9 +69,9 @@ public class FollowUpControllerTest {
         res2.setIdFollowUp(2L);
         when(resourceFollowUpService.findOne(res1.getIdFollowUp())).thenReturn(res2);
         // WHEN
-        FollowupDTO response = template
-                .getForObject("http://localhost:" + port + "/V1/followup/" + id,
-                FollowupDTO.class);
+        HttpEntity<Long> request = new HttpEntity<>(id);
+        ResponseEntity<FollowUp> result = this.template.exchange(uri, HttpMethod.GET, request, FollowUp.class);
+        FollowUp response = result.getBody();
 
         //Then
         Assertions.assertEquals(response.getIdFollowUp(), res2.getIdFollowUp());
@@ -84,20 +80,19 @@ public class FollowUpControllerTest {
     @Test
     public void createResourceFollowUpShouldSuccess() throws URISyntaxException {
 
-        URI uri = new URI("http://localhost:" + port + "/V1/followup/create");
-        FollowupDTO res1 = new FollowupDTO();
+        URI uri = new URI(baseURL+"create");
+        FollowUpDTOLight res1 = new FollowUpDTOLight();
         res1.setStatus(StatusEnum.VU);
-        res1.setIdFollowUp(1L);
         FollowUp res2 = new FollowUp();
         res2.setStatus(StatusEnum.AVOIR);
         res2.setIdFollowUp(2L);
         Mockito.when(resourceFollowUpService.createNewFollowUp(any(FollowUp.class)))
                 .thenReturn(res2);
 
-        HttpEntity<FollowupDTO> request = new HttpEntity<>(res1);
+        HttpEntity<FollowUpDTOLight> request = new HttpEntity<>(res1);
 
         // When
-        ResponseEntity<FollowupDTO> result = this.template.postForEntity(uri,request, FollowupDTO.class);
+        ResponseEntity<FollowupDTO> result = this.template.exchange(uri, HttpMethod.POST, request, FollowupDTO.class);
 
         //Then
         Mockito.verify(resourceFollowUpService, Mockito.times(1))
@@ -114,13 +109,13 @@ public class FollowUpControllerTest {
         URI uri = new URI(  baseURL + idFollowUp);
         HttpEntity<Long> request = new HttpEntity<>(idFollowUpL);
 
-        Mockito.when(followUpService.deleteFollowUp(idFollowUpL)).thenReturn(idFollowUpL);
+        Mockito.when(resourceFollowUpService.deleteFollowUp(idFollowUpL)).thenReturn(idFollowUpL);
 
         //When
         HttpEntity<Long> result = template.exchange(uri, HttpMethod.DELETE, request, Long.class);
 
         //Then
-        Mockito.verify(followUpService, Mockito.times(1)).deleteFollowUp(1L);
+        Mockito.verify(resourceFollowUpService, Mockito.times(1)).deleteFollowUp(1L);
     }
 
 }
